SubBt/force-app/main/default/objects/CO_Item_To_Budget_Item_Link__c/CO_Item_To_Budget_Item_Link__c.object-meta.xml
<CustomObject>
    <description>This is the junction object between Change order Item and Budget item . It will roll up all the Co item level amount at budget item level</description>
    <label>CO Item To Budget Item Link</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Budget To CO Link</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CO Item To Budget Item Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>