SubBt/force-app/main/default/objects/CO_Item_To_Budget_Item_Link__c/fields/Approved_CO_Formula__c.field-meta.xml
<CustomField>
    <fullName>Approved_CO_Formula__c</fullName>
    <formula>IF(
TEXT(CO_Item__r.Change_Order__r.Status__c) = &apos;Approved&apos;,
CO_Item__r.Total__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved CO Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>