SubBt/force-app/main/default/objects/CO_Item_To_Budget_Item_Link__c/fields/Auto_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Auto_Roll_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to auto roll up the CO item amount to budget item</description>
    <inlineHelpText>This field is used to auto roll up the CO item amount to budget item</inlineHelpText>
    <label>Auto Roll Up</label>
    <type>Checkbox</type>
</CustomField>