SubBt/force-app/main/default/objects/CO_Item_To_Budget_Item_Link__c/fields/Budget_Item__c.field-meta.xml
<CustomField>
    <fullName>Budget_Item__c</fullName>
    <label>Budget Item</label>
    <referenceTo>Budget_Item__c</referenceTo>
    <relationshipName>Budget_Item_To_CO_Item_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>