SubBt/force-app/main/default/objects/CO_Item_To_Budget_Item_Link__c/fields/CO_Item__c.field-meta.xml
<CustomField>
    <fullName>CO_Item__c</fullName>
    <label>Change Order Item</label>
    <referenceTo>Change_Order_Item__c</referenceTo>
    <relationshipName>Budget_Item_To_CO_Item_Links</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>