SubBt/force-app/main/default/objects/CO_Item_To_Budget_Item_Link__c/fields/Customer_Approved_CO__c.field-meta.xml
<CustomField>
    <fullName>Customer_Approved_CO__c</fullName>
    <label>Customer Approved CO</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>