SubBt/force-app/main/default/objects/CO_Item_To_Budget_Item_Link__c/fields/Pending_CO__c.field-meta.xml
<CustomField>
    <fullName>Pending_CO__c</fullName>
    <description>Pending CO Amount</description>
    <label>Pending CO</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>