SubBt/force-app/main/default/objects/CO_Item_To_Budget_Item_Link__c/fields/Pending_CO_Formula__c.field-meta.xml
<CustomField>
    <fullName>Pending_CO_Formula__c</fullName>
    <formula>IF( TEXT(CO_Item__r.Change_Order__r.Status__c) = &apos;Pending&apos; ,  CO_Item__r.SubTotal__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending CO Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>