SubBt/force-app/main/default/objects/CO_Item_To_Budget_Item_Link__c/fields/Total_App_and_Customer_App_CO__c.field-meta.xml
<CustomField>
    <fullName>Total_App_and_Customer_App_CO__c</fullName>
    <formula>Approved_CO_Formula__c  +  Customer_Approved_CO_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total App and Customer App CO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>