SubBt/force-app/main/default/objects/CO_Item_To_Budget_Item_Link__c/fields/Total_Approvals_CO__c.field-meta.xml
<CustomField>
    <fullName>Total_Approvals_CO__c</fullName>
    <label>Total Approvals CO</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>