SubBt/force-app/main/default/objects/CO_Item_To_Budget_Item_Link__c/fields/Total_CO_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_CO_Amount__c</fullName>
    <description>Change order Item  Total Amount</description>
    <label>Total CO Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>