SubBt/force-app/main/default/objects/CO_Item_To_Budget_Item_Link__c/fields/Total_CO_Formula__c.field-meta.xml
<CustomField>
    <fullName>Total_CO_Formula__c</fullName>
    <formula>CO_Item__r.SubTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CO Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>